--- a/package.json
+++ b/package.json
@@ -8,27 +8,26 @@
 	"license": "MIT",
 	"private": false,
 	"scripts": {
-		"start": "webpack-dev-server --mode development --open --hot",
-		"build": "webpack --mode production"
+		"start": "webpack-dev-server --open --hot",
+		"test": "jest --watch",
+		"watch": "webpack --watch",
+		"build": "webpack --mode=production"
 	},
 	"devDependencies": {
 		"@babel/cli": "^7.6.0",
 		"@babel/core": "^7.6.0",
-		"@babel/node": "^7.6.1",
-		"@babel/plugin-proposal-class-properties": "^7.5.5",
 		"@babel/plugin-proposal-object-rest-spread": "^7.5.5",
 		"@babel/preset-env": "^7.6.0",
-		"@babel/preset-react": "^7.0.0",
-		"@babel/register": "^7.6.0",
+		"@types/jest": "^24.0.18",
+		"babel-eslint": "^10.0.3",
 		"babel-loader": "^8.0.6",
 		"eslint": "6.1.0",
-		"eslint-config-airbnb": "18.0.1",
-		"eslint-plugin-import": "2.18.2",
-		"eslint-plugin-jsx-a11y": "6.2.3",
-		"eslint-plugin-react": "7.14.3",
-		"eslint-plugin-react-hooks": "1.7.0",
+		"eslint-loader": "^3.0.0",
+		"jest": "^24.9.0",
+		"jest-cli": "^24.9.0",
 		"webpack": "^4.39.3",
 		"webpack-cli": "^3.3.8",
 		"webpack-dev-server": "^3.8.0"
-	}
+	},
+	"dependencies": {}
 }
